# rust-gamedev

./: Cargo.toml
src/: main.rs
src/graphics/: camera.rs  mod.rs  shaders.rs
