[package]
name = "upp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.11", features = ["rwh_06"], default-features = false}
gl = "0.14.0"
gl-from-raw-window-handle = "0.1.4"
glam = "0.27.0"
